--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <nav class="navbar navbar-expand-lg">
 <div class="container">
 <a class="navbar-brand" href="index.html">
-<h2>Web nya Echa<em></em></h2>
+<h2>Echa | Bot Whatsapp<em></em></h2>
 </a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
@@ -93,7 +93,7 @@
 <div class="col-md-12">
 <div class="section-heading">
 <span>Hai Kakak</span>
-<h2>Selamat Datang di webnya echa</h2>
+<h2>Selamat Datang di Web Echaa</h2>
 <p>Echa Bot adalah robot yang dapat membantu pengguna dengan berbagai tugas, seperti menjawab pertanyaan, menyediakan informasi, membantu dalam pembelian, dan banyak lagi.Echa Bot ini dapat diintegrasikan dengan aplikasi WhatsApp untuk membantu pengguna dalam mengakses informasi dan melakukan tugas-tugas lainnya. Bot ini dapat membantu Anda dengan cepat menemukan informasi yang Anda cari, membantu Anda mengatur jadwal, dan banyak lagi.</p>
 </div>
 </div>
