--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="">
 <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 
-<title>Hallo Kak,Saya Echa</title>
+<title>Anak Ripper Cacat</title>
 
 <!-- Bootstrap core CSS -->
 <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-<iframe src="https://k.top4top.io/m_2707p3xks1.mp3" hidden="hidden" allow="autoplay"; encrypt-media></iframe>
+
 <!-- ***** Preloader Start ***** -->
 <div id="preloader">
 <div class="jumper">
@@ -36,29 +36,8 @@
 <nav class="navbar navbar-expand-lg">
 <div class="container">
 <a class="navbar-brand" href="index.html">
-<h2>Echa <em>Chan</em></h2>
+<h2>777 Store Ripper Kontol<em></em></h2>
 </a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarResponsive">
-<ul class="navbar-nav ml-auto">
-<li class="nav-item active">
-<a class="nav-link" href="index.html">Home
-<span class="sr-only">(current)</span>
-</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://wa.me/6283861518933">Nomor Echa</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://chat.whatsapp.com/G3TygUhjpZj4oFGga1sUd2">Group Echa</a>
-</li>
-<li class="nav-item">
-<a class="nav-link" href="https://wa.me/6283119312992">Contact Owner</a>
-</li>
-</ul>
-</div>
 </div>
 </nav>
 </header>
@@ -92,73 +71,17 @@
 <div class="row">
 <div class="col-md-12">
 <div class="section-heading">
-<span>Hai Kakak</span>
-<h2>Nama Saya Echa</h2>
-<p>Saya adalah robot yang dapat membantu pengguna dengan berbagai tugas, seperti menjawab pertanyaan, menyediakan informasi, membantu dalam pembelian, dan banyak lagi.Saya ini dapat diintegrasikan dengan aplikasi WhatsApp untuk membantu pengguna dalam mengakses informasi dan melakukan tugas-tugas lainnya. Bot ini dapat membantu Anda dengan cepat menemukan informasi yang Anda cari, membantu Anda mengatur jadwal, dan banyak lagi.</p>
-<br>
+<h2>WASPADA RIPPER !!!</h2>
+<p><b>Nomor +62 838-5190-4746 Telah Menipu Sebesar 400k Dengan Alasan Akun Free Fire,Jika anda bertemu nomor tersebut anda kenal segera block dan viral kan,karena dia telah menipu sebesar 400k!!!</b></p>
 </div>
 </div>
-<div class="col-md-4 col-sm-6 col-xs-12">
-<div class="service-item">
-<i class="fa fa-database"></i>
-<h4>Pengenalan</h4>
-<p>Echa Bot WhatsApp dapat mengirimkan pesan secara otomatis kepada pengguna yang mengirimkan pesan kepada mereka. Ini berguna untuk mengirimkan pesan yang sama secara berulang kepada banyak orang.</p>
-</div>
-</div>
-<div class="col-md-4 col-sm-6 col-xs-12">
-<div class="service-item">
-<i class="fa fa-database"></i>
-<h4>Fitur Yang Berguna</h4>
-<p>Echa Bot memiliki fitur-fitur yang sangat canggih dan keren,seperti fitur yang bisa membantu untuk mendownload postingan online seperti instagram,tiktok,twitter</p>
-</div>
-</div>
-<div class="col-md-4 col-sm-6 col-xs-12">
-<div class="service-item">
-<i class="fa fa-database"></i>
-<h4>Open Ai Chat</h4>
-<p>Seperti yang disinggung di atas,Echa Bot memiliki fitur canggih seperti Open Ai,kalian bisa memakai Open Ai Chat melalui Whatsapp Echa Bot</p>
-</div>
-</div>
-</div>
-</div>
-</div>
-<!-- Services Ends Here -->
-
-
-<!-- Pricing Starts Here -->
-
-<!-- Testimonials Ends Here -->
-
-
-<!-- Footer Starts Here -->
-<footer>
-<div class="container">
-<div class="row">
-<div class="col-md-3 col-sm-6 col-xs-12">
-<div class="footer-item">
-<div class="footer-heading">
-</div>
-</div>
-</div>
-<div class="col-md-3 col-sm-6 col-xs-12">
-<div class="footer-item">
-<div class="footer-heading">
-<h2>More Information</h2>
-</div>
-<ul class="footer-list">
-<li>Phone: <a href="https://wa.me/6283119312992">0831-1931-2992</a></li>
-<li>Email: echaxd.me@gmail.com</li>
-<li>Terima Kasih telah mengunjungi website Echa,kamu bisa join grup whatsapp official Echa Bot dengan menekan tombol diatas.</li>
-</ul>
-</div>
-</div>
-</footer>
-<!-- Footer Ends Here -->
-
-<!-- Bootstrap core JavaScript -->
 <script src="vendor/jquery/jquery.min.js"></script>
 <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+<img src="https://telegra.ph/file/f4ee998a525dd05ad70fd.jpg" alt="Gambar" align="center" width="100%" heigth="100%">
+<p>FOTO 2</p>
+<img src="https://telegra.ph/file/b574f503133d05a017e38.jpg" alt="Gambar" align="center" width="100%" heigth="100%">
+<p>FOTO 3</p>
+<img src="https://telegra.ph/file/a7a52c4105a00075f1dae.jpg" alt="Gambar" align="center" width="100%" heigth="100%">
 <!-- Additional Scripts -->
 <script src="assets/js/custom.js"></script>
 <script src="assets/js/owl.js"></script>
